<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_bookmarks"
        android:icon="@drawable/ic_bookmark_filled"
        android:title="@string/bookmarks_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_advanced_search"
        android:title="@string/action_advanced_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_theme_toggle"
        android:title="@string/action_theme_toggle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_font_size"
        android:title="@string/action_font_size"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_stats"
        android:title="@string/action_stats"
        app:showAsAction="never" />

</menu>
